Apply playlist profile options in playlist configuration dialog